musl/issues/ChemmineR.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'ChemmineR' ...
** this is package 'ChemmineR' version '3.62.0'
** package 'ChemmineR' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/BIOC/ChemmineR/src'
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c DisjointSets.cpp -o DisjointSets.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c cluster.cc -o cluster.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c cstrsplit.cc -o cstrsplit.o
In file included from /home/runner/R-patched/lib/BH/include/boost/bind/mem_fn.hpp:23,
                 from /home/runner/R-patched/lib/BH/include/boost/mem_fn.hpp:22,
                 from /home/runner/R-patched/lib/BH/include/boost/function/function_template.hpp:16,
                 from /home/runner/R-patched/lib/BH/include/boost/function.hpp:16,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string/detail/find_iterator.hpp:18,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string/find_iterator.hpp:24,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string/iter_find.hpp:27,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string/split.hpp:16,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string.hpp:23,
                 from cstrsplit.cc:7:
/home/runner/R-patched/lib/BH/include/boost/get_pointer.hpp:48:40: warning: 'template<class> class std::auto_ptr' is deprecated: use 'std::unique_ptr' instead [-Wdeprecated-declarations]
   48 | template<class T> T * get_pointer(std::auto_ptr<T> const& p)
      |                                        ^~~~~~~~
In file included from /usr/include/c++/14.2.0/memory:78,
                 from /home/runner/R-patched/lib/BH/include/boost/iterator/iterator_facade.hpp:11,
                 from /home/runner/R-patched/lib/BH/include/boost/range/iterator_range_core.hpp:27,
                 from /home/runner/R-patched/lib/BH/include/boost/range/iterator_range.hpp:13,
                 from /home/runner/R-patched/lib/BH/include/boost/range/as_literal.hpp:18,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string/trim.hpp:19,
                 from /home/runner/R-patched/lib/BH/include/boost/algorithm/string.hpp:19:
/usr/include/c++/14.2.0/bits/unique_ptr.h:59:28: note: declared here
   59 |   template<typename> class auto_ptr;
      |                            ^~~~~~~~
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c desc.cc -o desc.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c fingerprints.cc -o fingerprints.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c formats.cc -o formats.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c molecule.cc -o molecule.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include   -DNO_MAIN -DNO_DEBUG -DSTRICT_R_HEADERS -DR_NO_REMAP -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c r_wrap.cc -o r_wrap.o
r_wrap.cc:758:10: warning: "R_NO_REMAP" redefined
  758 | # define R_NO_REMAP
      |          ^~~~~~~~~~
<command-line>: note: this is the location of the previous definition
r_wrap.cc:761:10: warning: "STRICT_R_HEADERS" redefined
  761 | # define STRICT_R_HEADERS
      |          ^~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
r_wrap.cc: In function 'SEXPREC* SWIG_MakePtr(void*, const char*, int)':
r_wrap.cc:982:3: error: 'SET_S4_OBJECT' was not declared in this scope; did you mean 'NEW_OBJECT'?
  982 |   SET_S4_OBJECT(r_obj);
      |   ^~~~~~~~~~~~~
      |   NEW_OBJECT
r_wrap.cc: In function 'SEXPREC* R_SWIG_create_SWIG_R_Array(const char*, SEXP, int)':
r_wrap.cc:1000:4: error: 'SET_S4_OBJECT' was not declared in this scope; did you mean 'NEW_OBJECT'?
 1000 |    SET_S4_OBJECT(arr);
      |    ^~~~~~~~~~~~~
      |    NEW_OBJECT
r_wrap.cc: In function 'SEXPREC* SWIG_R_NewPointerObj(void*, swig_type_info*, int)':
r_wrap.cc:1023:3: error: 'SET_S4_OBJECT' was not declared in this scope; did you mean 'NEW_OBJECT'?
 1023 |   SET_S4_OBJECT(rptr);
      |   ^~~~~~~~~~~~~
      |   NEW_OBJECT
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:197: r_wrap.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/BIOC/ChemmineR/src'
make[1]: Entering directory '/var/local/PKGS/BIOC/ChemmineR/src'
make[1]: Leaving directory '/var/local/PKGS/BIOC/ChemmineR/src'
ERROR: compilation failed for package 'ChemmineR'
* removing '/home/runner/R-patched/lib/ChemmineR'
* restoring previous '/home/runner/R-patched/lib/ChemmineR'
